[package]
name = "mstock_1"
version = "0.1.1"
authors = ["mandu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = { version="2.0.0", features=["openssl"] }
actix-rt = "1.1.1"
env_logger = "0.7.1"

tera = "1.5.0"
actix-files = "0.2.1"
json = "0.12.4"
bytes = "0.5.4"
serde_json = "1.0"

r2d2 = "0.8.8"
r2d2-oracle = { version = "0.3.0", features = ["chrono"] }

actix-session = "0.3.0"
actix-redis = { version = "0.8.1", features = ["web"] }
openssl = "0.10.29"

reqwest = "0.10.4"

futures = "0.3.5"
futures-util = "0.3.5"
futures-macro = "0.3.5"
